Refactor CSS styles for layout and spacing

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
     }
 
     .page {
-      max-width: 1100px;
+      max-width: 900px;
       margin: 0 auto;
-      padding: 36px 24px 64px;
+      padding: 24px 16px 48px;
       display: grid;
-      gap: 32px;
+      gap: 24px;
     }
 
     header {
@@ -61,13 +61,16 @@
 
     main {
       display: grid;
-      grid-template-columns: minmax(0, 3fr) minmax(0, 2fr);
-      gap: 32px;
+      grid-template-columns: 1fr;
+      gap: 20px;
       align-items: start;
     }
 
-    @media (max-width: 900px) {
-      main { grid-template-columns: 1fr; }
+    @media (min-width: 1024px) {
+      main { grid-template-columns: minmax(0, 3fr) minmax(0, 2fr); gap: 28px; }
+    }
+
+    @media (max-width: 640px) {
       header { flex-direction: column; align-items: flex-start; }
       .header-meta { text-align: left; }
     }
@@ -206,8 +209,8 @@
 
     .agent-embed-wrapper {
       border: 1px solid var(--black);
-      padding: 14px;
-      min-height: 160px;
+      padding: 12px;
+      min-height: 140px;
       background: linear-gradient(135deg, var(--off-white), #ffffff);
       display: flex;
       align-items: center;
@@ -286,6 +289,7 @@
           </ul>
         </section>
 
+       
     <elevenlabs-convai agent-id="agent_0701kc52rnwyfcjtg4nxnyvctdbt"></elevenlabs-convai>
     <script src="https://unpkg.com/@elevenlabs/convai-widget-embed" async type="text/javascript"></script>
 
