Revise hero subtitle for clarity and detail
Updated the description in the hero subtitle to enhance clarity and detail.

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
       <section>
         <h1 class="hero-heading">Interview an AI <span>voice version of Dan</span>.</h1>
         <p class="hero-subtitle">
-          Use the floating widget below to chat with my digital clone. It's loaded up with a few stories about my career and sabbatical.
+          Use the floating widget below to chat with my digital clone! It's loaded up with a few stories about my career and sabbatical, and has been cloned to sound similar to my voice. Let me know what you think!
         </p>
 
       <aside>
