Enhance performance and update ElevenLabs widget loading
Added preconnect links for performance optimization and improved mobile scrolling behavior. Updated the ElevenLabs widget loading mechanism to lazy-load on user interaction or when in view.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>Virtual Dan</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Have a short conversation with Virtual Dan, an AI-powered voice version trained on Dan's experience in product, GTM, and customer strategy." />
+  <link rel="preconnect" href="https://unpkg.com" crossorigin>
+  <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
   <style>
     :root {
       --orange: #F36B21;
@@ -217,6 +219,10 @@
       justify-content: center;
     }
 
+    /* Improve mobile scrolling behavior */
+    html, body { -webkit-overflow-scrolling: touch; }
+    .agent-embed-wrapper, elevenlabs-convai { touch-action: manipulation; }
+
     footer {
       border-top: 2px solid var(--black);
       padding-top: 16px;
@@ -268,8 +274,12 @@
       <section>
         <h1 class="hero-heading">Interview an AI <span>voice version of Dan</span>.</h1>
         <p class="hero-subtitle">
-          Use the floating widget below to chat with my digital clone! It's loaded up with a few stories about my career and sabbatical, and has been cloned to sound similar to my voice. If you enjoy talking to my AI clone - and want to chat with the real deal - hit me up!
+          Use the floating widget below to chat with my digital clone. It's loaded up with a few stories about my career and sabbatical.
         </p>
+       
+ 
+
+   
 
       <aside>
         <section class="meta-card">
@@ -281,14 +291,58 @@
             <li>My Thru-Hike of the Appalachain Trail</li>
           </ul>
         </section>
-        </section>
-        <div class="primary-actions">
+           </section>
+       <div class="primary-actions">
           <a href="resume.html" class="btn btn-primary">See my resume</a>
           <a href="mailto:dsmith882@gmail.com" class="btn btn-secondary">Send me an email</a>
         </div>
        
     <elevenlabs-convai agent-id="agent_0701kc52rnwyfcjtg4nxnyvctdbt"></elevenlabs-convai>
-    <script src="https://unpkg.com/@elevenlabs/convai-widget-embed" async type="text/javascript"></script>
+
+    <!-- Lazy-load ElevenLabs widget: loads when the agent section becomes visible or user interacts -->
+    <script>
+      (function(){
+        const WIDGET_SRC = 'https://unpkg.com/@elevenlabs/convai-widget-embed@beta';
+        let loaded = false;
+        function loadWidget(){
+          if(loaded) return; loaded = true;
+          const s = document.createElement('script');
+          s.src = WIDGET_SRC;
+          s.async = true;
+          s.onload = function(){ console.info('ElevenLabs widget loaded'); };
+          s.onerror = function(){ console.warn('Failed to load ElevenLabs widget'); };
+          document.body.appendChild(s);
+        }
+
+        // Load on user interaction (click/touch) near the widget area
+        document.addEventListener('click', function(e){
+          if (e.target.closest('.agent-section') || e.target.closest('elevenlabs-convai') || e.target.closest('.agent-embed-wrapper')) {
+            loadWidget();
+          }
+        }, {passive:true});
+
+        // IntersectionObserver: load when agent-section comes into view (or near viewport)
+        const el = document.querySelector('.agent-section');
+        if (el && 'IntersectionObserver' in window) {
+          try{
+            const io = new IntersectionObserver((entries, obs) => {
+              if (entries[0].isIntersecting) { loadWidget(); obs.disconnect(); }
+            }, { rootMargin: '300px' });
+            io.observe(el);
+          }catch(e){ /* ignore */ }
+        }
+
+        // As a last resort, load after idle time on non-mobile to improve likelihood widget works
+        function isMobile(){ return /Mobi|Android|iPhone|iPad|iPod/i.test(navigator.userAgent); }
+        if (!isMobile()){
+          if ('requestIdleCallback' in window) {
+            requestIdleCallback(function(){ if(!loaded) loadWidget(); }, {timeout: 3000});
+          } else {
+            setTimeout(function(){ if(!loaded) loadWidget(); }, 3500);
+          }
+        }
+      })();
+    </script>
 
     <footer id="social">
       <div class="social-links">
