Load Convai library before opening Convai widget

--- a/index.html
+++ b/index.html
@@ -301,6 +301,8 @@
       text-align: center;
       font-size: 12px;
     }
+
+
   </style>
 </head>
 <body>
@@ -334,11 +336,22 @@
         <p class="hero-subtitle">The best teammates aren't satisfied with out of the box AI solutions.<br>They build their own.</p>
 
     <elevenlabs-convai agent-id="agent_0701kc52rnwyfcjtg4nxnyvctdbt"></elevenlabs-convai>
-    <script src="https://unpkg.com/@elevenlabs/convai-widget-embed" async type="text/javascript"></script>
 
     <script>
       (function () {
         const trigger = document.getElementById('start-convai');
+        let convaiLoaded = false;
+        function loadConvaiLib(cb) {
+          if (convaiLoaded || window.__convaiWidgetLoading) return cb && cb();
+          if (window.convaiWidgetLoaded) { convaiLoaded = true; return cb && cb(); }
+          const s = document.createElement('script');
+          s.src = 'https://unpkg.com/@elevenlabs/convai-widget-embed';
+          s.async = true;
+          window.__convaiWidgetLoading = true;
+          s.onload = function() { convaiLoaded = true; window.__convaiWidgetLoading = false; cb && cb(); };
+          s.onerror = function() { window.__convaiWidgetLoading = false; cb && cb(); };
+          document.head.appendChild(s);
+        }
         function openConvai() {
           const el = document.querySelector('elevenlabs-convai');
           if (!el) return;
@@ -359,8 +372,8 @@
           trigger.style.cursor = 'pointer';
           trigger.setAttribute('role', 'button');
           trigger.setAttribute('tabindex', '0');
-          trigger.addEventListener('click', openConvai);
-          trigger.addEventListener('keydown', function (e) { if (e.key === 'Enter' || e.key === ' ') { e.preventDefault(); openConvai(); } });
+          trigger.addEventListener('click', function() { loadConvaiLib(openConvai); });
+          trigger.addEventListener('keydown', function (e) { if (e.key === 'Enter' || e.key === ' ') { e.preventDefault(); loadConvaiLib(openConvai); } });
         }
       })();
     </script>
